// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": true
    }
  }
}"
`;

exports[`dependent output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"depends_on\\": [
        \\"\${test_resource.weird-long-running-resource}\\"
      ],
      \\"value\\": 1
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"weird-long-running-resource\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`description output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"description\\": \\"test-description\\",
      \\"value\\": 1
    }
  }
}"
`;

exports[`list output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": [
        \\"foo\\",
        \\"bar\\"
      ]
    }
  }
}"
`;

exports[`map output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": {
        \\"foo\\": \\"bar\\"
      }
    }
  }
}"
`;

exports[`number output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": 1
    }
  }
}"
`;

exports[`sensitive output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"sensitive\\": true,
      \\"value\\": 1
    }
  }
}"
`;

exports[`string output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"1\\"
    }
  }
}"
`;

exports[`variable output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"\${var.test-variable}\\"
    }
  }
}"
`;
